[package]
name = "gtasks-asana-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bimap = { version = "0.6.3", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
google-tasks1 = "6.0.0"
jiff = { version = "0.2.17", features = ["serde"] }
log = "0.4.29"
# hyper = { version = "1.8.1", features = ["client"] }
# hyper-rustls = "0.27.7"
# hyper-util = "0.1.19"
reqwest = { version = "0.13.0", features = ["json"] }
rustls = { version = "0.23.35", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
# yup-oauth2 = "12.1.1"
