[package]
name = "gtasks-asana-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
env_logger = "0.11.8"
google-tasks1 = "6.0.0"
jiff = { version = "0.2.17", features = ["serde"] }
log = "0.4.29"
reqwest = { version = "0.13.0", features = ["json"] }
rustls = "0.23.35"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148", default-features = false }
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
], default-features = false }
